--- a/working_elements/Draft/main.tex
+++ b/working_elements/Draft/main.tex
@@ -821,22 +821,68 @@ performance is ambiguous.
     \makecell{FOC approximation 2 \\ (fixing consumption)} & 0.042 & 0.0188 & 55.6981\\
     \bottomrule
     \end{tabular}
-    \caption{Algorithms and their performance}
+    \caption{Algorithms and their performance.\\ These results were obtained from small value grids.}
 \end{figure}
 
 \subsection{Policy Function Results}
 
+This subsection is dedicated to the presentation of the policy function 
+results from the numerical methods. 
+
+The calibration was as following: 
+
+rho = 1.5
+varphi = 2.00 
+beta = 0.96
+r = 0.17...
+
 - Consumption policy 
+
+% \begin{figure}[H]
+%     \includegraphics[width=\textwidth]{/Users/paulogcd/Documents/Master_Thesis/working_elements/Draft/output/histogram_1.png}
+%     \caption{Health Status distribution per Year, from the HRS data}
+% \end{figure}
 
 - Labor supply policy 
 
+% \begin{figure}[H]
+%     \includegraphics[width=\textwidth]{/Users/paulogcd/Documents/Master_Thesis/working_elements/Draft/output/histogram_1.png}
+%     \caption{Health Status distribution per Year, from the HRS data}
+% \end{figure}
+
 - Savings policy
+
+% \begin{figure}[H]
+%     \includegraphics[width=\textwidth]{/Users/paulogcd/Documents/Master_Thesis/working_elements/Draft/output/histogram_1.png}
+%     \caption{Health Status distribution per Year, from the HRS data}
+% \end{figure}
 
 \section{Results}
 
+This section is dedicated to the presentation of the results of the comparison 
+of the life time income between agents in different temperature scenarios. 
+
 \subsection{Lifetime income}
 
+To perform a comparison between different temperatures scenarios,
+we first need to precisely characterized the comparison reference, 
+i.e. the lifetime income.
+
+A model was first run for a temperature path going from 0.00 to 1.50. 
+
+From \url{https://pmc.ncbi.nlm.nih.gov/articles/PMC4534330/#S8}, 
+we know that the lifetime income for individuals born in the 1950s 
+having less than 
+High School (LTHS) education is 1,178,000 for men and 586,000 for women (in 2020 dollars).
+1,178,000 for men and 586,000, i.e. an average of 882\ 000 2020 dollars. 
+
+This lifetime income was then... 
+
+\subsection{Comparison}
+
 \section{Discussion}
+
+All the critiques go here. 
 
 \section{References}
 
